@@ -70,6 +70,7 @@ negative
 not
 or
 parse_url
+pmod
 positive
 pow
 power
